--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.1",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "mongoose-paginate-v2": "^1.8.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
