--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.17.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.1",
+    "lodash": "^4.17.21",
     "mongoose": "^8.4.1",
-    "mongoose-paginate-v2": "^1.8.2"
+    "mongoose-paginate-v2": "^1.8.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
     "@types/superagent": "^8.1.7",
     "nodemon": "^3.1.3",
